--- a/src/Styles/Career.css
+++ b/src/Styles/Career.css
@@ -1,3 +1,12 @@
-h2{
+.divtag
+{
+    margin-left: 200px;
+    margin-right: 200px;
+    border-color: blue;
     color:blueviolet;
+    border-radius: 20px;
+    border-width: 3px;
+    box-shadow: 2px 3px 2px red;
+    border-style: groove;
+    font-size:10px;
 }
