--- a/src/Styles/Career.css
+++ b/src/Styles/Career.css
@@ -1,9 +1,10 @@
 .divtag
 {
+    margin-top: 30px;
     margin-left: 200px;
     margin-right: 200px;
     border-color: blue;
-    color:blueviolet;
+    color:rgb(223, 216, 231);
     border-radius: 20px;
     border-width: 3px;
     box-shadow: 2px 3px 2px red;
