--- a/src/Styles/InfoCard.css
+++ b/src/Styles/InfoCard.css
@@ -29,10 +29,12 @@
 .infocard
 {
     /* absolute,relative,fixed,static,sticky */
+    align-items: center;
     position: relative;
     left: 30px;
     top: 30px;
-    width:1100px;
+    width:2500px;
+    margin-left: 100px;
 }
 
 
